--- a/demo/templates/demo/welcome.html
+++ b/demo/templates/demo/welcome.html
@@ -13,6 +13,9 @@
     {% for course in courses %}
         <h4>{{ course.title }}</h4>
     {% endfor %}
+    {% for tz in all_timezone %}
+        <h4>{{ tz }}</h4>
+    {% endfor %}
 {% else %}
     No course Found !!
 {% endif %}
